--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ name = "zero2prod"
 actix-web = "4"
 reqwest = "0.11"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+# We need the optional `derive` feature to use `serde`'s procedural macros: # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
+# The feature is not enabled by default to avoid pulling in
+# unnecessary dependencies for projects that do not need it.
+serde = { version = "1", features = ["derive"]}
